# Allay

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
config/: allay-config.toml  base.toml
crates/allay-backend/: Cargo.toml
crates/allay-backend/examples/: server-example.rs
crates/allay-backend/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/allay-base/: Cargo.toml
crates/allay-base/src/: async_util.rs  config.rs  costants.rs  data.rs  dependency.rs  file.rs  lib.rs  lock.rs  log.rs  sitemap.rs  template.rs  url.rs
crates/allay-base/src/config/: allay-config.toml  allay.rs  cli.rs  site.rs  theme.rs
crates/allay-base/tests/: data.rs  dependency.rs  file.rs  test_data.rs  test_file.rs
crates/allay-cli/: Cargo.toml
crates/allay-cli/src/: implement.rs  initialize.rs  lib.rs  main.rs
crates/allay-cli/src/implement/: build.rs  create.rs  plugin.rs  serve.rs
crates/allay-cli/tests/: logger.rs
crates/allay-compiler/: Cargo.toml
crates/allay-compiler/src/: allay.pest  ast.rs  compile.rs  driver.rs  env.rs  error.rs  extract.rs  interpret.rs  interpreter.rs  lib.rs  meta.rs  misc.rs  parse.rs  parser.rs  scope.rs
crates/allay-compiler/src/extract/: cache.rs  matching.rs  process.rs
crates/allay-compiler/src/interpret/: interpreter.rs  scope.rs  traits.rs  var.rs
crates/allay-compiler/src/parse/: allay.pest  parser.rs
crates/allay-compiler/tests/: compile.rs
crates/allay-md-parser/: Cargo.toml
crates/allay-md-parser/src/: allay.pest  lib.rs
crates/allay-md-parser/tests/: test.rs
crates/allay-parser/: Cargo.toml
crates/allay-parser/src/: lib.rs
crates/allay-parser/tests/: test.rs
crates/allay-plugin/: Cargo.toml
crates/allay-plugin-api/: Cargo.toml
crates/allay-plugin-api/crates/plugin-macro/: Cargo.toml
crates/allay-plugin-api/crates/plugin-macro/src/: lib.rs
crates/allay-plugin-api/src/: component.rs  http.rs  lib.rs
crates/allay-plugin-api/src/component/: base.rs  compiler.rs  export.rs  listen.rs  route.rs  sort_page.rs
crates/allay-plugin-api/src/http/: into_response.rs  request.rs  response.rs
crates/allay-plugin-api/wit/: base.wit  compiler.wit  listen.wit  route.wit  sort-page.wit
crates/allay-plugin-host/: Cargo.toml
crates/allay-plugin-host/src/: component.rs  lib.rs
crates/allay-plugin-host/src/component/: compiler.rs  export.rs  listen.rs  route.rs  sort_page.rs
crates/allay-plugin/src/: bus.rs  config.rs  events.rs  lib.rs  manager.rs  plugins.rs  types.rs
crates/allay-plugin/src/events/: server.rs
crates/allay-plugin/src/plugins/: auth.rs
crates/allay-publish/: Cargo.toml
crates/allay-publish/src/: content.rs  generate.rs  generator.rs  lib.rs  listener.rs  plugin.rs  process.rs  publish.rs  sitemap.rs  worker.rs
crates/allay-publish/src/assets/: auto-reload.js  href.js  wrapper.html
crates/allay-publish/src/generate/: auto-reload.js  head.html  impls.rs  traits.rs
crates/allay-server/: Cargo.toml
crates/allay-theme/: Cargo.toml
crates/allay-web/: Cargo.toml
crates/allay-web/examples/: server-example.rs
crates/allay-web/src/: builtin.rs  lib.rs  plugin_worker.rs  route.rs  routes.rs  server.rs
crates/allay-web/src/route/: file.rs  hot_reload.rs  utils.rs
doc/dev/: ast.md  cli.md  compiler.md  developer-guide.md
doc/dev/uml/: class.puml  sequence.puml  state.puml
doc/user/: book.toml  index.md
doc/user/allay-template/: commands.md  keywords-and-operations.md  layouts.md  scope.md  variables.md
doc/user/configuration/: index.md
doc/user/custom-contents/: create-pages.md  front-matter.md
doc/user/custom-themes/: structure.md
doc/user/extra-functions/: shortcode.md
doc/user/getting-started/: file-structure.md  index.md
doc/user/src/: SUMMARY.md  index.md
doc/user/src/contents/: front-matter.md  index.md
doc/user/src/extra-functions/: index.md  shortcode.md
doc/user/src/getting-started/: file-structure.md
doc/user/src/template/: commands.md  index.md  layouts.md
doc/user/src/themes/: create-a-theme.md  index.md
doc/user/theme/: index.hbs
doc/user/theme/css/: chrome.css  general.css  variables.css
plugins/auth/: Cargo.toml
plugins/auth/db/: dev.db
plugins/auth/migrations/2025-11-15-121931-0000_create/: down.sql  up.sql
plugins/auth/migrations/create/: down.sql  up.sql
plugins/auth/src/: conn_pool.rs  lib.rs  model.rs  router.rs  schema.rs  verify.rs
plugins/reading-time/: Cargo.toml
plugins/reading-time/src/: lib.rs
plugins/sort-page/: Cargo.toml
plugins/sort-page/src/: lib.rs
