[workspace]
resolver = "3"
members = ["crates/*", "plugins/*"]

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
tokio = { version = "1.48", default-features = false, features = ["rt"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"
anyhow = "1.0"
tempfile = "3.23"
notify = "8.2"
notify-debouncer-full = "0.6"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
itertools = "0.14"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
git2 = "0.20"
dialoguer = "0.12"
webbrowser = "1.0"
pulldown-cmark = "0.13"
pest = "2.8"
pest_derive = "2.8"
regex = "1.12"
wit-bindgen = "0.47"
wasmtime = "38.0"
wasmtime-wasi = "38.0"
mime_guess = "2.0"
cfg-if = "1.0"
