[package]
name = "allay-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base = { path = "../allay-base" }
allay-publish = { path = "../allay-publish" }
allay-web = { path = "../allay-web" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
git2.workspace = true
dialoguer.workspace = true
webbrowser.workspace = true

[[bin]]
name = "allay"
path = "src/main.rs"
