[package]
name = "allay-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base.workspace = true
allay-publish.workspace = true
allay-web.workspace = true
allay-plugin = { workspace = true, optional = true }
anyhow.workspace = true
cfg-if.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
git2.workspace = true
dialoguer.workspace = true
webbrowser.workspace = true
reqwest.workspace = true

[[bin]]
name = "allay"
path = "src/main.rs"

[features]
default = ["plugin"]
plugin = ["allay-web/plugin", "allay-publish/plugin", "dep:allay-plugin"]
