[package]
name = "allay-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base.workspace = true
allay-plugin = { workspace = true, optional = true }
pulldown-cmark.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
itertools.workspace = true
thiserror.workspace = true
serde_json.workspace = true
syntect.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["plugin"]
plugin = ["dep:allay-plugin"]
