[package]
name = "allay-plugin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin-macro = { path = "crates/plugin-macro" }
allay-base = { path = "../allay-base" }
wit-bindgen.workspace = true
urlencoding.workspace = true
axum = { version = "0.8", default-features = false }
async-trait.workspace = true
anyhow.workspace = true
