[package]
name = "allay-publish"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base.workspace = true
allay-compiler.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
walkdir.workspace = true
tracing.workspace = true

[features]
default = ["plugin"]
plugin = ["allay-compiler/plugin"]