[package]
name = "allay-web"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base = { path = "../allay-base" }
allay-plugin = { path = "../allay-plugin" }
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
mime_guess.workspace = true
