[package]
name = "allay-web"
version = "0.1.0"
edition = "2024"

[dependencies]
allay-base.workspace = true
allay-plugin = { workspace = true, optional = true }
tokio = { workspace = true, default-features = true, features = ["fs", "net", "sync"] }
tokio-util.workspace = true
axum = { workspace = true, default-features = true }
thiserror.workspace = true
serde.workspace = true
walkdir.workspace = true
mime_guess.workspace = true
cfg-if.workspace = true
rayon.workspace = true

[features]
default = ["plugin"]
plugin = ["allay-plugin"]
