[package]
name = "plugin-auth"
version = "0.1.0"
edition = "2024"
description = "Demo authentication plugin for Allay"
license = "Apache-2.0"
authors = ["Leo Dreamer <leodreamer2004@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
allay-plugin-api = { path = "../../crates/allay-plugin-api" }
uuid = { version = "1.19", features = ["v4"] }
bcrypt = "0.17"
chrono = "0.4"
serde_json = "1.0"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
diesel = { version = "2.3", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
